# analysis

./: .env.example  README.md  main.py  pyproject.toml  utils.py
services/: config.py  constants.py  database.py  fetch_ohlcv.py  gemini.py
